# spreetail-take-home-assignment

./: .env.example  .gitignore  BRIEF_NOTES.md  Makefile  README.md  STRUCTURED_OUTPUT_IMPROVEMENTS.md  lefthook.yml
backend/: README.md  main.py  pyproject.toml
backend/database/: __init__.py  database.py
backend/database/models/: __init__.py  context.py  enums.py  file.py  message.py  summary.py  thread.py
backend/routers/: events.py  files.py  summaries.py  threads.py
backend/services/background/: __init__.py  database_ops.py  json_loader.py  task_manager.py  thread_processor.py
backend/services/openrouter/: __init__.py  chunker.py  client.py  config.py  message_formatter.py  prompt_builder.py  response_parser.py  schema_generator.py  text_processor.py
docs/: ce_complex_threads.json  instructions.md
frontend/: .biomeignore  README.md  biome.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/common/: confirm-dialog.tsx  error-boundary.tsx  index.ts  markdown-renderer.tsx  theme-toggle.tsx
frontend/src/components/files/: file-table.tsx  file-upload.tsx  index.ts  upload-dialog.tsx
frontend/src/components/summaries/: approve-dialog.tsx  index.ts  reject-dialog.tsx  summary-highlights.tsx  user-feedback-card.tsx
frontend/src/components/threads/: index.ts  thread-detail.tsx  thread-list.tsx
frontend/src/lib/: api.ts  file-storage.ts  mock-data.ts  query-client.ts  query-keys.ts  schemas.ts  toast.ts
frontend/src/routes/: __root.tsx  files.$fileId.tsx  index.tsx
(+25 files in other folders)
